Tested with Picade hat